--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li class="nav-item">
             <a href="" class="nav-link active d-flex">
 
-            <img src="../assets/img/user1-128x128.jpg" width="30px" height="30px" style="border-radius: 50%;" alt="">
+            <img src="https://cdn.jsdelivr.net/gh/AhmerAli1813/DPanel-main/assets/img/user1-128x128.jpg" width="30px" height="30px" style="border-radius: 50%;" alt="">
             </a>
             </li>
             <li class="nav-item"><a href="" class="nav-link  active"><i class="fas fa-sign-out-alt"></i></a></li>
@@ -118,7 +118,7 @@
             <li class="sidebar-item ">
 
             <a href="" class="">
-            <span class="icon"><img  src="assets/img/user1-128x128.jpg"/></span>
+            <span class="icon"><img  src="https://cdn.jsdelivr.net/gh/AhmerAli1813/DPanel-main/assets/img/user1-128x128.jpg"/></span>
             <span class="title">ahmer</span>  
             </a>    
 
