--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
-<script src="assets/js/dpanel.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/AhmerAli1813/DPanel-main/assets/js/dpanel.js"></script>
 
 
 </body>
